# libAppSettings

./: AppSettings.sln  README.md
AppSettings/: AppSettings.vcxproj  AppSettings.vcxproj.filters  app_settings.h  app_settings_internal.h  cif.cpp  main.cpp  main.h  vitasdk_exports.yml
sample/: CMakeLists.txt  main.c  sample.vcxproj  settings.xml
